# ingester-agents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gitleaks.yaml  soliplex.yaml  trufflehog.yaml
example-manifests/: composite.yml  delete-stale.yml  fs.yml  scm.yml  web.yml  webdav.yml
scripts/: bootstrap_webdav.py
src/soliplex/agents/: __init__.py  cli.py  client.py  config.py  local_state.py  local_store.py  retry.py
src/soliplex/agents/common/: __init__.py  config.py  mime.py  s3.py  urls_file.py
src/soliplex/agents/example/: __init__.py
src/soliplex/agents/fs/: app.py  cli.py
src/soliplex/agents/manifest/: cli.py  haiku_loader.py  runner.py  schedule_registry.py
src/soliplex/agents/scm/: __init__.py  app.py  base.py  cli.py  git_cli.py
src/soliplex/agents/server/: __init__.py  auth.py  haiku_queue.py  locks.py
src/soliplex/agents/web/: app.py
src/soliplex/agents/webdav/: __init__.py  app.py  async_client.py  cli.py  (+1 more)
tests/functional/: conftest.py  test_gitea.py  test_gitea_vcr.py  test_github.py
tests/functional/cassettes/: test_create_repository.yaml  test_create_repository_and_add_file.yaml  test_create_repository_and_add_issue.yaml  test_incremental_sync_empty_repo.yaml  test_incremental_sync_with_issue.yaml  test_load_inventory_empty_repo.yaml  test_load_inventory_with_file.yaml
tests/gitea/: README.md  docker-compose.yml  init-admin.ps1  init-admin.sh  issues.csv  reset-and-restart.ps1  reset-and-restart.sh  setup_test_repo.py
tests/gitea/.claude/: settings.local.json
tests/test_fs/: files2.json  invalid_files.json  inventory.json  test.md
tests/unit/: __init__.py  conftest.py  test_async_webdav_client.py  test_base.py  test_client.py  test_common_config.py  test_common_mime.py  test_common_processors.py  test_common_s3.py  test_common_urls_file.py  test_config.py  test_example.py  test_exceptions.py  test_fs_app.py  test_git_cli.py  test_gitea.py  test_gitea_provider.py  test_github.py  test_github_provider.py  test_haiku_loader.py  test_incremental_sync.py  test_local_state.py  test_local_store.py  test_manifest_cli.py  test_manifest_models.py  test_manifest_runner.py  test_retry.py  test_schedule_registry.py  test_server_app.py  test_server_auth.py  test_server_routes_fs.py  test_server_routes_manifest.py  test_server_routes_scm.py  test_server_routes_web.py  test_server_routes_webdav.py  test_server_scheduling.py  test_utils.py  test_webdav_app.py  test_webdav_state.py
(+15 files in other folders)
