[project]
name = "soliplex.agents"
version = "0.3.2"
description = "Agents for use with soliplex-ingester"
authors = [{ name = "Enfold Systems", email = "info@enfoldsystems.net" }]
readme = "README.md"
license = "MIT"
keywords = [ "document-processing", "soliplex", "scm", "github", "gitea"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
]

requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "fastapi>=0.115.0",
    "fastapi-crons>=2.1.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.34.0",
    "webdav4>=0.10.0",
]


[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "httpx>=0.28.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]



[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "soliplex.agents"


[project.scripts]
si-agent = "soliplex.agents.cli:cli"

[tool.pytest_env]
scm_auth_token="test_scm_auth_token"
scm_auth_username="test_username"
scm_auth_password="test_password"
scm_owner="test_owner"
scm_base_url="http://localhost:3000/api/v1"
LOG_LEVEL="INFO"
INGESTER_URL="http://localhost:8000/ingest_document"





[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
# skip 'tests/functional' by default
testpaths = ["tests/unit"]
addopts = "--cov=soliplex --cov=tests/unit --cov-branch --cov-fail-under=100"
filterwarnings = [
    # "ignore::DeprecationWarning:<source-package>",
]

[tool.coverage.run]
omit = [
    "*/cli.py",
    "*/app.py",
    "*/templates/*",
    "*/conftest.py",
    "*/server/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 126
exclude = [
]
target-version = "py313"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]
ignore = [ "TRY003" , "B008"
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
